DataCloudVirtualization/objects/Error_Logs__c.object
<CustomObject>
    <fields>
        <fullName>API__c</fullName>
        <label>API Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ErrorRecordID__c</fullName>
        <label>ErrorRecordID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_From__c</fullName>
        <label>Exception From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <label>Exception Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Request__c</fullName>
        <label>Input Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interface__c</fullName>
        <label>Interface</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Cloudcherry</fullName>
                </value>
                <value>
                    <fullName>Gupshup</fullName>
                </value>
                <value>
                    <fullName>CTI</fullName>
                </value>
                <value>
                    <fullName>SCV-CCNS</fullName>
                </value>
                <value>
                    <fullName>SCV-NPS</fullName>
                </value>
                <value>
                    <fullName>ARMS</fullName>
                </value>
                <value>
                    <fullName>Social Studio</fullName>
                </value>
                <value>
                    <fullName>SCV-DataArchive</fullName>
                </value>
                <value>
                    <fullName>DataArchivalBatch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error Logs</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Error Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>